64/apply spotless formatter